Bug 143567 - Area Style/Filling from Image toolbar doesn't match with sidebar info for Area
Summary: Area Style/Filling from Image toolbar doesn't match with sidebar info for Area
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.1.4.2 release
Hardware: All All
: medium normal
Assignee: Katarina Behrens
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords:
Depends on:
Blocks: Area-Fill-Tab Toolbars
  Show dependency treegraph
 
Reported: 2021-07-27 21:09 UTC by BogdanB
Modified: 2021-08-26 01:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2021-07-27 21:09:57 UTC
Description:
Before testing this bug activate the Image toolbar (View - Toolbars - Image)
- Create a shape and right click, choose Area - Pattern and choose any pattern. 
- The description from Sidebar (Area- Fill) doesn't match with Toolbar (Area Style/Filling field)

See image


Steps to Reproduce:
Before testing this bug activate the Image toolbar (View - Toolbars - Image)
- Create a shape and right click, choose Area - Pattern and choose any pattern. 
- The description from Sidebar (Area - Fill) doesn't match with Toolbar (Area Style/Filling field)

Actual Results:
Toolbar says the same shape has as a background a Bitmap
Sidebar says the same shape has as a background a Pattern.
The real background is a pattern, so, the toolbar is wrong.

Expected Results:
Sidebar and toolbar says the background is a pattern.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 612d5b1a04fe022a34018d901bb9b052791d54e5
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

The dropdown problem from toolbar was solved in bug 128612.
Comment 1 Ezinne 2021-07-30 21:16:08 UTC
Reproducible in:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 7c1bad415ae48635dc67041c413bb7b76a530c22
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-07-05_06:55:03
Calc: threaded
Comment 2 Commit Notification 2021-08-19 10:28:47 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1b06e7e9e8c467de3450077fe8b90be6b7f73e4b

tdf#143567: Distinguish bitmap vs. pattern fill style

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2021-08-24 18:39:27 UTC
Katarina, I have verified your work. Well done. It's ok. You can mark this bug as resolved.

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: fbe183bbb05220a4ccc51952445b1797bb498403
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 Katarina Behrens 2021-08-25 18:51:38 UTC
Happy to read
Comment 5 BogdanB 2021-08-25 19:27:09 UTC
Thanks again.

Verified with
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: fbe183bbb05220a4ccc51952445b1797bb498403
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 Commit Notification 2021-08-26 01:45:41 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/36baacbf86f81de457af40a4a91b294136bf8ddc

tdf#143567: Distinguish bitmap vs. pattern fill style

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.