tdf#143567: Distinguish bitmap vs. pattern fill style

By the time fill style state change (SID_ATTR_FILL_STYLE) happens,
the actual bitmap fill may or may not be known. If it is not known,
it is impossible to tell whether it is a regular bitmap or
a pattern. That's why this toolbar sometimes incorrectly reports
bitmap fill instead of pattern one

To solve the problem, we adjust fill style listbox selection only
later, by the time we know for sure the fill IS a pattern

Change-Id: I0aa95c49601d77dca29ab54ad4c056a76a90e049